<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- ImageView for Profile Picture -->
    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/baseline_person_24"
        android:scaleType="centerCrop"
        android:background="@drawable/rounded_image" />

    <!-- Vertical LinearLayout to hold guest information -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/guestNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:text="@string/guestName" />

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:text="@string/msg" />

        <TextView
            android:id="@+id/postingDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:text="@string/date" />

    </LinearLayout>
</LinearLayout>
